recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: missing arguments for method snowSide in class Koch;
follow this method with `_' if you want to treat it as a partially applied function
  if (snowSide==0){
      ^